[tool.poetry]
name = "excel-fill-marks"
version = "0.1.0"
description = ""
authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.5"
easygui = "^0.98.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
